Correction FireFox + Trait Nav Bar + Ombre augmentée de 0.1 pour plus de visibilité

--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,6 @@ body {
     flex-direction: column;
 }
 
-.main-container > footer {
-    margin: 0px 50px 0px 50px;
-}
-
 /****** Section Default ***********/
 
 .section-title {
@@ -71,7 +67,7 @@ body {
     background-color: white;
     border-radius: 20px;
     padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
     flex: 1 1 auto;
 }
 
@@ -255,7 +251,7 @@ header {
 }
 
 #filterbutt > button > i {
-    font-size: 22px;
+    font-size: 24px;
 }
 
 #filterbutt > button:hover {
@@ -457,6 +453,7 @@ footer{
     display: flex;
     flex-direction: row;
     background-color: var(--main-bg-color);
+    margin: 0px 50px;
 }
 
 footer h1 {
@@ -485,22 +482,29 @@ footer h2 {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
+    /*** Général ***/
+
+    .main-container {
+        padding: 0px;
+    }
+
     .hebergements-and-populaires {
         flex-direction: column;
     }
 
-    #hebergements {
-        width: 100%;
-    }
-
-    #populaires {
-        width: 100%;
-    }
+    /*** En-tête ***/
 
     #filters {
         flex-direction: column;
         align-items: flex-start;
         gap: 20px;
+    }
+
+    /*** Populaires ***/
+
+    #populaires {
+        width: 100%;
     }
 
     .populaires-cards {
@@ -512,7 +516,7 @@ footer h2 {
 
     .populaires-cards .card {
         width: 30%;
-        height: 100%;
+        height: auto;
     }
 
     .populaires-cards .card-txt {
@@ -531,8 +535,10 @@ footer h2 {
         font-size: 14px;
     }
 
-    .main-container {
-        padding: 0px;
+    /*** Hébergement ***/
+
+    #hebergements {
+        width: 100%;
     }
 
     .hebergements-and-populaires section {
@@ -544,6 +550,10 @@ footer h2 {
     #activités .card img {
         height: 200px;
     }
+
+    footer {
+        gap: 30px;
+    }
 }
 
 /* Small devices (phones, less than 768px) */
@@ -552,10 +562,7 @@ footer h2 {
     /*** Général ***/
 
     body {
-        width: 100%;
         margin: auto;
-        padding: 20px;
-        display: flex;
     }
 
     .main-container{
@@ -589,7 +596,8 @@ footer h2 {
    
     .buttonnav {
         padding-top: 0px;
-        padding-bottom: 2px;
+        padding-bottom: 15px;
+        border-bottom: 2px solid var(--filter-bg-color);
         width: 50%;
         text-align: center;
     }
@@ -599,7 +607,7 @@ footer h2 {
         border-bottom: 2px solid var(--main-color) !important;
         color: var(--main-color);
         padding-top: 0px;
-        padding-bottom: 0px;
+        padding-bottom: 15px;
     }
 
     /*** En-tête ***/
@@ -630,8 +638,13 @@ footer h2 {
     }
 
     
-    .filterbutt > button {
+    #filterbutt > button {
         width: 48% !important;
+    }
+
+    #filterbutt > button > i {
+        font-size: 22px;
+        width: 22px;
     }
 
     /*** Général H&P ***/
@@ -646,9 +659,8 @@ footer h2 {
     /*** Populaires ***/
 
     #populaires {
-        min-width: 0px;
         padding: 30px 20px !important;
-        flex-flow: column;
+        border-radius: 0px;
     }
 
     .populaires-cards {
@@ -661,7 +673,7 @@ footer h2 {
 
     .populaires-cards .card {
         width: 100%;
-        height: 30%;
+        height: 30vh;
     }
 
     /*** Hébergement ***/
